force-app/main/default/objects/Apex_Test_Monitor_Request__c/Apex_Test_Monitor_Request__c.object-meta.xml
<CustomObject>
    <description>Tracks asynchronous Apex test coverage monitor requests created from the LWC.</description>
    <label>Apex Test Monitor Request</label>
    <nameField>
        <label>Request Number</label>
        <type>AutoNumber</type>
        <displayFormat>ATMR-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Apex Test Monitor Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>