force-app/main/default/objects/Apex_Test_Monitor_Request__c/fields/InputPayload__c.field-meta.xml
<CustomField>
    <fullName>InputPayload__c</fullName>
    <description>JSON rows submitted by the user.</description>
    <label>Input Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>