force-app/main/default/objects/Apex_Test_Monitor_Request__c/fields/OrchestrationJobId__c.field-meta.xml
<CustomField>
    <fullName>OrchestrationJobId__c</fullName>
    <description>Queueable job id that submitted the Apex test queue items.</description>
    <label>Orchestration Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>