force-app/main/default/objects/Apex_Test_Monitor_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>High-level monitor request status.</description>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>