force-app/main/default/objects/Apex_Test_Monitor_Request__c/fields/TestQueueItemIds__c.field-meta.xml
<CustomField>
    <fullName>TestQueueItemIds__c</fullName>
    <description>Comma-separated ApexTestQueueItem ids submitted for this monitor request.</description>
    <label>Test Queue Item Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>