force-app/main/default/objects/Apex_Test_Monitor_Request__c/fields/TestRunId__c.field-meta.xml
<CustomField>
    <fullName>TestRunId__c</fullName>
    <description>Parent AsyncApexJob id for the submitted Apex test run.</description>
    <label>Test Run Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>